# bazel-monorepo

./: .gitignore
projects/calculator_api/: BUILD.bazel
projects/calculator_api/requirements/: requirements.txt
projects/calculator_api/src/: main.py
projects/calculator_core/: BUILD.bazel
projects/calculator_core/src/: calculator.py
projects/calculator_core/tests/: test_add_multiply.py  test_runner.py  test_subtract_divide.py
projects/projectA/: BUILD.bazel
projects/projectB/: BUILD.bazel
