load("@rules_python//python:pip.bzl", "pip_parse")

pip_parse(
    name = "pip_deps",
    requirements_lock = "//projects/calculator-api/requirements:requirements.txt",
)

load("@pip_deps//:requirements.bzl", "install_deps")

install_deps()

py_binary(
    name = "main",
    srcs = ["src/main.py"],
    deps = [":calculator"],
)
